--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=EcommerceBackend
+spring.datasource.url=jdbc:h2:mem:ecommerce
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+# Set the path for the console
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.jpa.hibernate.ddl-auto=update
+
