--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 project.image=images/
+spring.app.jwtSecret=mySecretKey
+spring.app.jwtExpirationMs=300
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.example.ecommercebackend=DEBUG
