--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=EcommerceBackend
-spring.datasource.url=jdbc:h2:mem:ecommerce
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:ecommerce
+#spring.datasource.driver-class-name=org.h2.Driver
+
 spring.h2.console.enabled=true
 # Set the path for the console
 spring.h2.console.path=/h2-console
@@ -15,3 +16,13 @@ logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.example.ecommercebackend=DEBUG
 spring.ecom.app.jwtCookieName=springbootecom
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomdb
+spring.datasource.username=root
+spring.datasource.password=root@123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+
