--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,19 @@ logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.example.ecommercebackend=DEBUG
 spring.ecom.app.jwtCookieName=springbootecom
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomdb
-spring.datasource.username=root
-spring.datasource.password=root@123
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecomdb
+#spring.datasource.username=root
+#spring.datasource.password=root@123
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=admin@123
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 
