--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-appication.properties
+# Ignore application.properties file
+src/main/resources/application.properties
