--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,6 @@
-
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-spring.datasource.username=postgres
-spring.datasource.password=admin@123
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -11,3 +9,4 @@ server.port=5000
 
 
 
+#postgresql://postgres:wDBGUHatmulCPsnLYvzFURSkOQxFWdWU@turntable.proxy.rlwy.net:28171/railway
