--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.ecom.app.jwtCookieName=springbootecom
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.profiles.active=dev
+spring.profiles.active=${ENV:dev}
 
 
 
