--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:28171/railway
+spring.datasource.username=postgres
+spring.datasource.password=wDBGUHatmulCPsnLYvzFURSkOQxFWdWU
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
