--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.ecom.app.jwtCookieName=springbootecom
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.profiles.active=${ENV:dev}
+server.port=${PORT:8080}
 
 
 
