--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>2.5.4</version>
+        </dependency>
         <!--        <dependency>-->
 <!--            <groupId>com.mysql</groupId>-->
 <!--            <artifactId>mysql-connector-j</artifactId>-->
