--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,15 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:28171/railway
+spring.datasource.username=postgres
+spring.datasource.password=wDBGUHatmulCPsnLYvzFURSkOQxFWdWU
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
+
+# Ensure that roles are created before other operations
+spring.jpa.defer-datasource-initialization=true
+
+# Enable data initialization
+spring.sql.init.mode=always
